[gd_scene load_steps=19 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/C.png" type="Texture" id=2]
[ext_resource path="res://Octave.tscn" type="PackedScene" id=3]
[ext_resource path="res://Clef.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="ButtonGroup" id=12]
resource_name = "my_buttons"

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="DynamicFont" id=11]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="ButtonGroup" id=13]
resource_name = "my_buttons"

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )
Keyboard = ExtResource( 3 )
Staff = ExtResource( 4 )

[node name="Polygon2D4" type="Polygon2D" parent="."]
position = Vector2( 368, 838 )
color = Color( 0.184314, 0.223529, 0.384314, 1 )
polygon = PoolVector2Array( 0, 0, 600, -600, 1200, 0 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 529, 679 )
rotation = -0.785398
color = Color( 0.0235294, 0.407843, 0.521569, 1 )
polygon = PoolVector2Array( 0, 0, 75, 100, 75, 40, 400, 40, 400, 100, 475, 0, 400, -100, 400, -40, 352.361, -40, 75, -40, 75, -100 )

[node name="Label1" type="Label" parent="Polygon2D"]
margin_left = 93.4725
margin_top = -39.5399
margin_right = 383.472
margin_bottom = 37.4601
hint_tooltip = "Match the note name to the correct key.."
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "Key : Note"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2( 1069, 338 )
rotation = 0.785398
color = Color( 0.0235294, 0.407843, 0.521569, 1 )
polygon = PoolVector2Array( 0, 0, 75, 100, 75, 40, 400, 40, 400, 100, 475, 0, 400, -100, 400, -40, 352.361, -40, 75, -40, 75, -100 )

[node name="Label2" type="Label" parent="Polygon2D2"]
margin_left = 75.0
margin_top = -39.209
margin_right = 405.0
margin_bottom = 37.791
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 2 )
text = "Note : Staff"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D3" type="Polygon2D" parent="."]
position = Vector2( 730, 838 )
color = Color( 0.0235294, 0.407843, 0.521569, 1 )
polygon = PoolVector2Array( 0, 0, 75, 100, 75, 40, 400, 40, 400, 100, 475, 0, 400, -100, 400, -40, 352.361, -40, 75, -40, 75, -100 )

[node name="Label3" type="Label" parent="Polygon2D3"]
margin_left = 75.0
margin_top = -39.33
margin_right = 400.0
margin_bottom = 37.67
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Key : Staff"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 684.0
margin_top = 68.0
margin_right = 1226.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 7 )
text = "Select level to play."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="Button" parent="."]
margin_left = 666.0
margin_top = 606.0
margin_right = 856.0
margin_bottom = 677.0
rect_rotation = -45.0
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 8 )
group = SubResource( 12 )
text = "Level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="Button" parent="."]
margin_left = 1139.0
margin_top = 475.0
margin_right = 1339.0
margin_bottom = 546.0
rect_rotation = 45.0
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
group = SubResource( 13 )
text = "Level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3" type="Button" parent="."]
margin_left = 868.0
margin_top = 722.0
margin_right = 1068.0
margin_bottom = 793.0
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 8 )
text = "Level 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 969, 344 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )
